--- a/nuxt-unstyled-tailwind/package.json
+++ b/nuxt-unstyled-tailwind/package.json
@@ -11,15 +11,17 @@
     "devDependencies": {
         "@primevue/nuxt-module": "^4.1.1",
         "autoprefixer": "^10.4.16",
+        "nuxt": "3.12.1",
         "postcss": "^8.4.31",
         "postcss-import": "^16.1.0",
-        "nuxt": "3.12.1"
+        "sass-embedded": "^1.80.3"
     },
     "dependencies": {
+        "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
-        "vue": "^3.4.27",
-        "vue-router": "^4.2.5",
         "tailwindcss": "^3.4.1",
-        "tailwindcss-primeui": "^0.3.4"
+        "tailwindcss-primeui": "^0.3.4",
+        "vue": "^3.4.27",
+        "vue-router": "^4.2.5"
     }
 }
