--- a/nuxt-unstyled-tailwind/package.json
+++ b/nuxt-unstyled-tailwind/package.json
@@ -17,6 +17,7 @@
         "sass-embedded": "^1.80.3"
     },
     "dependencies": {
+        "chart.js": "^4.4.5",
         "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
         "tailwindcss": "^3.4.1",
