--- a/nuxt-unstyled-tailwind/package.json
+++ b/nuxt-unstyled-tailwind/package.json
@@ -17,7 +17,9 @@
         "sass-embedded": "^1.80.3"
     },
     "dependencies": {
+        "@pinia/nuxt": "^0.5.5",
         "chart.js": "^4.4.5",
+        "pinia": "^2.2.4",
         "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
         "tailwindcss": "^3.4.1",
